--- a/Jarditout_MS/Jarditout/Index.html
+++ b/Jarditout_MS/Jarditout/Index.html
@@ -4,29 +4,59 @@
 		<title>Jarditout le site ou il y a tout !</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrin-to-fit=no">
-		<link rel="stylesheet" type="text/css" href="CSS/css_jarditou.css">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 	</head>
 	<body>
-		<header> 
-			<div class="TL">
-				<img class="Logo" src="Logo/jarditou_logo.jpg" title="Logo Jarditou" height="100" width="400" alt="Logo">
-				<div class="PH">
-					<p>Tout le jardin</p>
+		<div class="container-fluid col-8 col-lg-12">
+			<header>
+				<div class="row">
+						<img class="img-fluid col-2" src="Logo/jarditou_logo.jpg" title="Logo Jarditou">
+						<p class="col-4 display-4 h2 text-right offset-6">Tout le jardin</p>
 				</div>
+			</header>
+
+
+
+			<div class="row">
+				<nav class="navbar navbar-expand-lg navbar-light bg-light">
+					<p class="navbar-brand mr-auto">Jarditou.com</p>
+
+
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+
+
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item active">
+						<a class="nav-link" href="Index.html">Accueil</a>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link" href="Utilitaire.html">Tableau</a>
+					</li>
+					<li class="nav-item">
+						<a class = "nav-link " href="Contact.html" tabinex="-1" aria-disabled="true" aria-expanded="false">Contact</a>
+					</li>
+				</ul>
+					<form class="form-inline my-2 my-lg-0">
+						<input class="form-control mr-sm-2" type="search" placeholder="Promouvoir" aria-label="Search">
+						<button class="btn btn-outline-success my-2 my-sm-0" type="submit">rechercher</button>
+					</form>
 			</div>
-		</header>
-		<nav class="nav">
-			<ul>
-				<li><a href="Index.html">Accueil</a></li>
-				<li><a href="Utilitaire.html">Tableau</a></li>	
-				<li><a href="Contact.html">Contact</a></li>
-			</ul>
-		</nav>
-		<p><img class="Promo" src="Logo/promotion.jpg" alt="Promo"></p> 
+				</nav>
+			<p class="col-12"><img class="img-fluid" src="Logo/promotion.jpg" alt="Promo"></p> 
+		</div>
+
+
+
+
+
+
+
+
+
 			<div class="tout">
 				<article class="colo">
-					<h2>Accueil</h2>
-					<hr>
 					<h1> L'entreprise</h1>
 					<p>  Notre entreprise familiale met tout son savoir-faire à votre disposition dans le domaine du jardin et du paysagisme.</p>
 					<p> Créée il y a 70 ans, notre entreprise vend fleurs, arbustes, matériel à main et motorisés.</p>
@@ -48,5 +78,6 @@
 					<li><a href=#>Plan du site</a></li>
 				</ul>
 			</footer>
+		</div>
 	</body>
 </html>
