--- a/Jarditout_MS/Jarditout/Index.html
+++ b/Jarditout_MS/Jarditout/Index.html
@@ -7,56 +7,54 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 	</head>
 	<body>
-		<div class="container-fluid col-8 col-lg-12">
+
+		<!--Tête d'affiche-->
+		<div class="container-fluid">
 			<header>
 				<div class="row">
-						<img class="img-fluid col-2" src="Logo/jarditou_logo.jpg" title="Logo Jarditou">
-						<p class="col-4 display-4 h2 text-right offset-6">Tout le jardin</p>
+						<img class="img-fluid d-none d-sm-block col-sm-4 col-md-4 col-lg-3 col-xl-3 pl-0" src="Logo/jarditou_logo.jpg" title="Logo Jarditou">
+						<p class="d-none d-sm-block col-sm-6 col-md-6 col-lg-3 col-xl-3 pl-0 display-3 h3 text-right offset-6">Tout le jardin</p>
 				</div>
 			</header>
+			<!--Fin tête d'affiche-->
 
-
-
+			<!--Barre de navigation-->
 			<div class="row">
 				<nav class="navbar navbar-expand-lg navbar-light bg-light">
-					<p class="navbar-brand mr-auto">Jarditou.com</p>
+					<a class="navbar-brand" href="#">Jarditou.com</a>
+						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+							<span class="navbar-toggler-icon"></span>
+						</button>
 
 
-					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-
-
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active">
-						<a class="nav-link" href="Index.html">Accueil</a>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link" href="Utilitaire.html">Tableau</a>
-					</li>
-					<li class="nav-item">
-						<a class = "nav-link " href="Contact.html" tabinex="-1" aria-disabled="true" aria-expanded="false">Contact</a>
-					</li>
-				</ul>
-					<form class="form-inline my-2 my-lg-0">
-						<input class="form-control mr-sm-2" type="search" placeholder="Promouvoir" aria-label="Search">
-						<button class="btn btn-outline-success my-2 my-sm-0" type="submit">rechercher</button>
-					</form>
+					<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+						<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+							<li class= "nav-item active">
+								<a class="nav-link" href="Index.html">Accueil</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="Utilitaire.html">Tableau</a>
+							</li>
+							<li class="nav-item">
+								<a class = "nav-link disabled" href="Contact.html">Contact</a>
+							</li>
+						</ul>
+						<div class="col-7"></div>
+						<form class="form-inline my-2 my-lg-0">
+							<input class="form-control mr-sm-2" type="search" placeholder="Promouvoir" aria-label="Search">
+							<button class="btn btn-outline-success my-2 my-sm-0" type="submit">rechercher</button>
+						</form>
+					</div>
 			</div>
 				</nav>
-			<p class="col-12"><img class="img-fluid" src="Logo/promotion.jpg" alt="Promo"></p> 
-		</div>
+				<div class="row">
+					<p><img class="img-fluid col-12 overflow-auto" src="Logo/promotion.jpg" alt="Promo"></p> 	
+				</div>
+			<!--Fin de la barre de navigation-->
 
-
-
-
-
-
-
-
-
-			<div class="tout">
-				<article class="colo">
+			<!--Text plus colonne-->
+			<div class="row">
+				<article class="col-12 col-lg-8">
 					<h1> L'entreprise</h1>
 					<p>  Notre entreprise familiale met tout son savoir-faire à votre disposition dans le domaine du jardin et du paysagisme.</p>
 					<p> Créée il y a 70 ans, notre entreprise vend fleurs, arbustes, matériel à main et motorisés.</p>
@@ -67,17 +65,40 @@
 					<h2>Devis gratuit</h2>
 					<p>Vous pouvez bien sûr contacter pour de plus amples informations ou pour une demande d’intervention. Vous souhaitez un devis ? Nous vous le réalisons gratuitement.</p>
 				</article>
-					<div class="pilo">
+					<div class="border border-warning bg-warning col-12 col-lg-4">
 							[COLONNE DROITE]
 					</div>
-		</div>
-			<footer>
-				<ul>
-					<li><a href="Mention_légales.html">Mention légales</a></li>
-					<li><a href="Horaire.html">Horaires</a></li>
-					<li><a href=#>Plan du site</a></li>
-				</ul>
-			</footer>
-		</div>
+			</div>
+			<!--Fin texte plus colonne-->
+
+
+			<!--Début de fin-->
+				<div class="row">
+					<footer class="navbar navbar-expand-lg navbar-dark bg-dark">
+						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+							<span class="navbar-toggler-icon"></span>
+						  </button>
+						  <div class="collapse navbar-collapse" id="navbarTogglerDemo03">							
+							<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+								<li class="nav-item">
+									<a class="nav-link" href="Mention_légales.html">Mention légales</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="Horaire.html">Horaires</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href=# >Plan du site</a>
+								</li>
+							</ul>
+					</footer>
+				</div>
+			</div>
+			<!--Fin de fin-->
+
+
+		</div>	
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	</body>
 </html>
