--- a/Jarditout_MS/Jarditout/Index.html
+++ b/Jarditout_MS/Jarditout/Index.html
@@ -12,7 +12,7 @@
 		<div class="container-fluid">
 			<header>
 				<div class="row">
-						<img class="img-fluid d-none d-sm-block col-sm-4 col-md-4 col-lg-3 col-xl-3 pl-0" src="Logo/jarditou_logo.jpg" title="Logo Jarditou">
+						<img class="img-fluid d-none d-sm-block col-sm-4 col-md-4 col-lg-3 col-xl-3 pl-0" src="Logo/jarditou_logo.jpg" title="Logo Jarditou" alt="logo">
 						<p class="d-none d-sm-block col-sm-6 col-md-6 col-lg-3 col-xl-3 pl-0 display-3 h3 text-right offset-6">Tout le jardin</p>
 				</div>
 			</header>
@@ -36,7 +36,7 @@
 								<a class="nav-link" href="Utilitaire.html">Tableau</a>
 							</li>
 							<li class="nav-item">
-								<a class = "nav-link disabled" href="Contact.html">Contact</a>
+								<a class = "nav-link" href="Contact.html">Contact</a>
 							</li>
 						</ul>
 						<div class="col-7"></div>
