--- a/Jarditout_MS/Jarditout/Utilitaire.html
+++ b/Jarditout_MS/Jarditout/Utilitaire.html
@@ -4,94 +4,139 @@
 		<title>Page Utilitaire</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrin-to-fit=no">
-		<link rel="stylesheet" type="text/css" href="CSS/css_jarditou.css">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 	</head>
 	<body>
-		<header>
-			<div class="TL">
-				<img src="Logo/jarditou_logo.jpg" height="100" width="400" alt="logo">
-				<div class="PH">
-					<p>Tout le jardin</p>
-				</div>
-			</div>
-		</header>
-		<nav class="nav">
-			<ul>
-				<li><a href="Index.html">Accueil</a></li>
-				<li><a href="Utilitaire.html">Tableau</a></li>	
-				<li><a href="Contact.html">Contact</a></li>
-			</ul>
-		</nav>
-		<p><img class="Promo"src="Logo/promotion.jpg" alt="promo"></p>
-			<div class="tout">
-				<article class="colo">
-				<h1> Produit Utilitaire</h1>
-				<hr>
-				<table>
-					<thead>
-						<tr>
-							<th>Photo</th>
-							<th>Id</th>
-							<th>Catégorie</th>
-							<th>Libellé</th>
-							<th>Prix</th>
-							<th>Couleur</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td><img src="jarditou_photos/7.jpg" height="200" width="200" alt="7"></td>
-							<td> 7</td>
-							<td> Barbecues</td>
-							<td> Aramis</td>
-							<td> 110.00€</td>
-							<td> Brun</td>
-						</tr>
-						<tr>
-							<td><img src="jarditou_photos/8.jpg" height="200" width="200" alt="8"></td>
-							<td>8</td>
-							<td>Barbecues</td>
-							<td>Athos</td>
-							<td>249.99€</td>
-							<td>Noir</td>
-						</tr>
-						<tr>
-							<td><img src="jarditou_photos/11.jpg" height="200" width="200" alt="11"></td>
-							<td>11</td>
-							<td>Barbecues</td>
-							<td>Clatronic</td>
-							<td>135.90€</td>
-							<td>Chrome</td>
-						</tr>
-						<tr>
-							<td><img src="jarditou_photos/12.jpg" height="200" width="200" alt="12"></td>
-							<td>12</td>
-							<td>Barbecues</td>
-							<td>Camping</td>
-							<td>88.00€</td>
-							<td>Noir</td>
-						</tr>
-						<tr>
-							<td><img src="jarditou_photos/13.jpg" height="200" width="200" alt="13"></td>
-							<td>13</td>
-							<td>Brouette</td>
-							<td>Green</td>
-							<td>49.00€</td>
-							<td>Verte</td>
-						</tr>
-						</tbody>
-					</table>
-				</article>
-				<div class="pilo">
-							[COLONNE DROITE]
+		<div class="container-fluid">
+			<!--Tête d'affiche-->
+				<header>
+					<div class="row">
+						<img class="img-fluid d-none d-sm-block col-sm-4 col-md-4 col-lg-3 col-xl-3 pl-0" src="Logo/jarditou_logo.jpg" alt="logo">
+							<p class="d-none d-sm-block col-sm-6 col-md-6 col-lg-3 col-xl-3 pl-0 display-2 h1 text-right offset-6">Tout le jardin</p>
 					</div>
-			</div>
-			<footer>
-					<ul>
-						<li><a href=Mention_légales.html>Mention légales</a></li>
-						<li><a href=Horaire.html>Horaires</a></li>
-						<li><a href=#>Plan du site</a></li>
+				</header>
+			<!--Fin d'affiche-->
+
+			<!--Barre de navigation-->
+		<div class="row">
+			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+				<a class="navbar-brand" href="#">Jarditou.com</a>
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+
+
+				<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+					<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+						<li class="nav-item">
+							<a class="nav-link" href="Index.html">Accueil</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="Utilitaire.html">Tableau</a>
+						</li>	
+						<li class="nav-item">
+							<a class="nav-link" href="Contact.html">Contact</a>
+						</li>
 					</ul>
-			</footer>
+					<div class="col-7"></div>
+					<form class="form-inline my-2 my-lg-0">
+						<input class="form-control mr-sm-2" type="search" placeholder="Promouvoir" aria-label="Search">
+						<button class="btn btn-outline-success my-2 my-sm-0" type="submit">rechercher</button>
+					</form>
+				</div>
+			</nav>
+		</div>
+			<p><img class="img-fluid col-12 overflow-auto" src="Logo/promotion.jpg" alt="promo"></p>
+			<!--Fin barre de navigation-->
+
+			<!--Tableau-->
+				<div class="row">
+					<article class="colo">
+
+					<table class="table table-striped table-bordered">
+						<thead>
+							<tr class="table-active">
+								<th scope="col">Photo</th>
+								<th scope="col">Id</th>
+								<th scope="col">Catégorie</th>
+								<th scope="col">Libellé</th>
+								<th scope="col">Prix</th>
+								<th scope="col">Couleur</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr class="table-warning">
+								<th scope="row"><img class="img-fluid" src="jarditou_photos/7.jpg" height="200" width="200" alt="7"></th>
+								<td> 7</td>
+								<td> Barbecues</td>
+								<td> Aramis</td>
+								<td> 110.00€</td>
+								<td> Brun</td>
+							</tr>
+							<tr>
+								<th scope="row"><img class="img-fluid" src="jarditou_photos/8.jpg" height="200" width="200" alt="8"></th>
+								<td>8</td>
+								<td>Barbecues</td>
+								<td>Athos</td>
+								<td>249.99€</td>
+								<td>Noir</td>
+							</tr>
+							<tr class="table-warning">
+								<th scope="row"><img class="img-fluid" src="jarditou_photos/11.jpg" height="200" width="200" alt="11"></th>
+								<td>11</td>
+								<td>Barbecues</td>
+								<td>Clatronic</td>
+								<td>135.90€</td>
+								<td>Chrome</td>
+							</tr>
+							<tr>
+								<th scope="row"><img class="img-fluid" src="jarditou_photos/12.jpg" height="200" width="200" alt="12"></th>
+								<td>12</td>
+								<td>Barbecues</td>
+								<td>Camping</td>
+								<td>88.00€</td>
+								<td>Noir</td>
+							</tr>
+							<tr class="table-warning">
+								<th scope="row"><img class="img-fluid" src="jarditou_photos/13.jpg" height="200" width="200" alt="13"></th>
+								<td>13</td>
+								<td>Brouette</td>
+								<td>Green</td>
+								<td>49.00€</td>
+								<td>Verte</td>
+							</tr>
+							</tbody>
+						</table>
+					</article>
+				</div>
+			<!--FIn Tableau-->
+
+			<!--Barre de mention-->
+			<div class="row">
+				<footer class="navbar navbar-expand-lg navbar-dark bg-dark">
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					  </button>
+					  <div class="collapse navbar-collapse" id="navbarTogglerDemo03">							
+						<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+							<li class="nav-item">
+								<a class="nav-link" href="Mention_légales.html">Mention légales</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="Horaire.html">Horaires</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href=# >Plan du site</a>
+							</li>
+						</ul>
+				</footer>
+			</div>
+			<!--Fin barre de mention-->
+
+
+		</div>
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	</body>
 </html>
