--- a/Eval/Contact.html
+++ b/Eval/Contact.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Page Contacts</title>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrin-to-fit=no">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="CSS/css_jarditou.css">
 	</head>
 	<body>
@@ -29,19 +29,19 @@
 				<h2>Contact</h2>
 				<hr>
 				<p>*Ces zones sont obligatoires</p>
-				<form action="http://bienvu.net/script.php" method="GET">
+				<form action="http://bienvu.net/script.php" method="GET" id="Form">
 				<fieldset class="contac">
 					<legend>Vos coordonnées</legend>
-						<label for="nom">Votre Nom*:</label><input type="text" name="nom" id="nom"><br>
-						<label for="prenom">Votre prénom*:</label><input type="text" name="prenom" id="prenom"><br>
+						 <label for="nom">Votre Nom*:</label>	<input type="text" name="nom" id="nom"><br>				<!--Js fais -->
+						<label for="prenom">Votre prénom*:</label>	<input type="text" name="prenom" id="prenom"><br>
 						<span> Sexe*:</span>
 						<input type="radio" name="sexe" value="Homme">Homme
 						<input type="radio" name="sexe" value="Femme">Femme<br>
-						<label for="date">Date de naissance*:</label><input type="date" name="ddn" id="date"><br>
-						<label for="CodePostal">Code postal*:</label><input type="text" name="CodePostale" id="CodePostal"><br>
-						<label for="Adress">Adress*:</label><input type="text" name="Adress" id="Adress"><br>
-						<label for="Ville"> Ville*:</label><input type="text" name="Ville" id="Ville"><br>
-						<label for="Email">Email*:</label><input type="text" name="Email" id="Email" placeholder="dave.loper@afpa.fr"><br>
+						<label for="date">Date de naissance*:</label>	<input type="date" name="ddn" id="date"><br>
+						<label for="CodePostal">Code postal*:</label>	<input type="text" name="CodePostale" id="CodePostal"><br>
+						<label for="Adress">Adress*:</label>	<input type="text" name="Adress" id="Adress"><br>
+						<label for="Ville"> Ville*:</label>	<input type="text" name="Ville" id="Ville"><br>
+						<label for="Email">Email*:</label>	<input type="text" name="Email" id="Email" placeholder="dave.loper@afpa.fr"><br>
 				</fieldset>
 				<br>
 				<fieldset>
@@ -58,7 +58,7 @@
 				</fieldset>
 						<input type="checkbox" name="*J'accepte le traitement information de ce formulaire">*J'accepte le traitement information de ce formulaire<br>
 						<br>
-						<input type="submit" name="Envoyer">
+						<input type="submit" name="Envoyer" id="Envoyer">
 						<input type="reset" name="Annuler">
 				</form>
 				<br>
@@ -74,6 +74,6 @@
 					<li><a href=#>Plan du site</a></li>
 				</ul>
 			</footer>
-		<script src="JS/script_test.js"></script>
+		<script src="Exo_5.js"></script>
 	</body>
 </html>
