Eval Fini avec bouton

--- a/Eval/Eval.html
+++ b/Eval/Eval.html
@@ -7,12 +7,23 @@
 </head>
 <body>
     <h1>L'Eval de folie</h1>
-    <div class="Exo_1">
-        <button title="Go Exo" id="Exo_one" type="button">Test l'exo 1 UwU</button>
-        <div class="cercle"><div id="id_div_ex1" class="div_arrow"></div></div>
-      </div>
+
+        <button id="Exo1" onclick="getElementById('exo1').innerHtml= Exo1()">Exo 1 ? Clic ici XD</button>
+        <p id ="exo1"></p>
         <br>
+        <button id="Exo2" onclick="getElementById('exo2').innerHtml= TableMultiplication()">Exo 2 ? Clic ici tu verras bien</button>
+        <p id ="exo2"></p>
         <br>
-        <div id="Exo2"> </div>
-    <script src="js_Eval.js"></script>
+        <button id="Exo3" onclick="getElementById('exo3').innerHtml= Exo_3()">Exo 3 ? Clic la ces l'exo 3 UwU</button>
+        <p id ="exo3"></p>
+        <br>
+        <button id="Exo4" onclick="getElementById('exo4').innerHtml= Exo_4()">Clic ces surement l'exo 4 XD</button>
+        <p id ="exo4"></p>
+        <br>
+        <a href="Contact.html">L'Exo de verification du formulaire es la !</a>
+
+    <script src = "Exo_1.js"></script>
+    <script src = "Exo_2.js"></script>
+    <script src = "Exo_3.js"></script>
+    <script src = "Exo_4.js"></script>
 </body>
