Fin_chapitre_php

--- a/FRONT/DYNAMIQUE/JAVASCRIPT/Liens_exo_js.html
+++ b/FRONT/DYNAMIQUE/JAVASCRIPT/Liens_exo_js.html
@@ -17,7 +17,7 @@
 
 
 
-            <script src="exo_js/Script_D.O.M.js"></script>
+            <script src="exo_js/Script_tableau.js"></script>
 
 
 
